--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://username:password@hostname:port/database_name
-SECRET_KEY=your_secret_key
+DATABASE_URL=sqlite:///instance/school.db
+#'postgresql://school_campaign_user:JS9jt3a0iQEda0VyVrDefXk4Hn5E97kl@dpg-d08hd32dbo4c73adnv8g-a.oregon-postgres.render.com/school_campaign'
+SECRET_KEY='ae70c96071ffba342a608701046c424dec77a76e9796144f'
